[package]
name = "pam_mount"
version = "0.0.5"
authors = ["Dorin Popa <dp@i51.org>"]

[lib]
name = "pam_mount"
crate-type = ["cdylib"]
#test = true
plugin = false

# [dependencies]
# libc = "*"

[profile.release]
opt-level = 2
debug = false
rpath = false
debug-assertions = false
lto = true
panic = 'abort'
